@@ -5,6 +5,16 @@
   <version>1.0.0-RC</version>
   <name>Minecraft Chat Monitor</name>
 
+  <reporting>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-project-info-reports-plugin</artifactId>
+        <version>2.6</version>
+      </plugin>
+    </plugins>
+  </reporting>
+
    <build>
 		<resources>
             <resource>
@@ -39,26 +49,52 @@
 	          </descriptorRefs>
 	        </configuration>
         </plugin>
-		<plugin>
-	        <groupId>org.jacoco</groupId>
-	        <artifactId>jacoco-maven-plugin</artifactId>
-	        <version>0.8.2</version>
-	        <executions>
-	            <execution>
-	                <goals>
-	                    <goal>prepare-agent</goal>
-	                </goals>
-	            </execution>
-	            <!-- attached to Maven test phase -->
-	            <execution>
-	                <id>report</id>
-	                <phase>test</phase>
-	                <goals>
-	                    <goal>report</goal>
-	                </goals>
-	            </execution>
-	        </executions>
-	    </plugin>
+
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.7.6.201602180812</version>
+                <executions>
+                    <!-- Prepares the property pointing to the JaCoCo runtime agent which
+                        is passed as VM argument when Maven the Surefire plugin is executed. -->
+                    <execution>
+                        <id>pre-unit-test</id>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                        <configuration>
+                            <!-- Sets the name of the property containing the settings for JaCoCo
+                                runtime agent. -->
+                            <propertyName>surefireArgLine</propertyName>
+                        </configuration>
+                    </execution>
+                    <!-- Ensures that the code coverage report for unit tests is created
+                        after unit tests have been run. -->
+                    <execution>
+                        <id>post-unit-test</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                        <configuration>
+                            <!-- Sets the output directory for the code coverage report. -->
+                            <outputDirectory>${project.reporting.outputDirectory}/jacoco-ut</outputDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <!-- Used for unit tests -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.19.1</version>
+                <configuration>
+                    <!-- Sets the VM argument line used when unit tests are run. -->
+                    <!-- argLine>${surefireArgLine}</argLine -->
+                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                </configuration>
+            </plugin>
+
       </plugins>
 
    </build>
@@ -91,7 +127,12 @@
 			<version>1.26</version>
 			<scope>provided</scope> <!-- Prevents it from being shaded -->
 		</dependency>
-
+		<dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
 		<!-- https://mvnrepository.com/artifact/net.sourceforge.cobertura/cobertura -->
 		<!-- dependency>
 		    <groupId>net.sourceforge.cobertura</groupId>
